--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <button class="repeat" id="repeat"><i class="fa fa-undo   "></i></button>
     </div>
     <div class="body">
-      <div class="body-left">
+      <div class="body-left" style="flex:2">
         <div class="immediate-pricing" id="immediatePricing">
           <div class="current-price">
             <div class="current"></div>
@@ -31,6 +31,12 @@
           </div>
         </div>
         <div class="chart-container" id="chartContainer"></div>
+        <div class="days-change" id="daysChange">
+          <div><b>Day's Change</b>: </div>
+          <div class="previous-day"></div>
+          <div class="today"></div>
+          <div class="change"></div>
+        </div>
       </div>
       <div class="body-right">
         <div class="news-header"></div>
