--- a/index.html
+++ b/index.html
@@ -11,28 +11,47 @@
         integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg"
         crossorigin="anonymous">
 
+  <!-- <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+          integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+          crossorigin="anonymous"></script> -->
+
 
 </head>
 
 <body>
   <div class="wrapper">
     <div class="header">
-      <div class="header-text" id="headerText"></div>
-      <input type="text" id="symbolInput" class="symbol-input" placeholder="Enter a Symbol">
-      <button class="search" id="search"><i class="fa fa-search"></i></button>
-      <button class="repeat" id="repeat"><i class="fa fa-undo   "></i></button>
+      <div class="header-text"
+           id="headerText"></div>
+      <input type="text"
+             id="symbolInput"
+             class="symbol-input"
+             placeholder="Enter a Symbol">
+      <button class="search"
+              id="search">
+        <i class="fa fa-search"></i>
+      </button>
+      <button class="repeat"
+              id="repeat">
+        <i class="fa fa-undo   "></i>
+      </button>
     </div>
     <div class="body">
-      <div class="body-left" style="flex:2">
-        <div class="immediate-pricing" id="immediatePricing">
+      <div class="body-left"
+           style="flex:2">
+        <div class="immediate-pricing"
+             id="immediatePricing">
           <div class="current-price">
             <div class="current"></div>
             <div class="prev-close"></div>
           </div>
         </div>
-        <div class="chart-container" id="chartContainer"></div>
-        <div class="days-change" id="daysChange">
-          <div><b>Day's Change</b>: </div>
+        <div class="chart-container"
+             id="chartContainer"></div>
+        <div class="days-change"
+             id="daysChange">
+          <div>
+            <b>Day's Change</b>: </div>
           <div class="previous-day"></div>
           <div class="today"></div>
           <div class="change"></div>
@@ -44,6 +63,8 @@
       </div>
     </div>
   </div>
+  <script src="companies.js"></script>
+  <script src="nyse.js"></script>
   <script src="scripts.js"></script>
 </body>
 
