--- a/index.html
+++ b/index.html
@@ -53,6 +53,16 @@
           <div class="today"></div>
           <div class="change"></div>
         </div>
+        <div class="other-info">
+          <div class="day">
+            <div id="dayHigh" class="price-display"></div>
+            <div id="dayLow" class="price-display"></div>
+          </div>
+          <div class="fftytwo">
+              <div id="week52High" class="price-display"></div>
+            <div id="week52Low" class="price-display"></div>
+          </div>
+        </div>
       </div>
       <div class="body-right">
         <div class="news-header"></div>
