--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
   <div class="wrapper">
     <div class="header">
+      <button class="save" id="save"><i class="fa fa-save"></i></button>
       <div class="header-text"
            id="headerText"></div>
       <input type="text"
@@ -69,6 +70,7 @@
         <div class="news-container"></div>
       </div>
     </div>
+    <div class="footer"></div>
   </div>
   <script src="companies.js"></script>
   <script src="nyse.js"></script>
