--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
         <div class="news-container"></div>
       </div>
     </div>
-    <div class="footer"></div>
+    <div class="footer">
+      <div class="footer-content" id="footerContent"></div>
+    </div>
   </div>
   <script src="companies.js"></script>
   <script src="nyse.js"></script>
