--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
       <div class="footer-content" id="footerContent"></div>
       <button class="ticker pause-ticker" onclick="stopSavedStockInterval()"><i class="fa fa-pause"></i></button>
       <button class="ticker play-ticker"  onclick="createSavedStockInterval()"><i class="fa fa-undo"></i></button>
+      <div class="footer-content-expand" id="footerContentExpanded"></div>
+      <button class="contract" onclick="contractFooterFunc()"><i class="fa fa-chevron-down"></i></button>
+      <button class="expand" onclick="expandFooterFunc()"><i class="fa fa-chevron-up"></i></button>
     </div>
   </div>
   <script src="companies.js"></script>
